# IS

./: CMakeLists.txt  README.md  app.h  auth.c
microservices/auth-service/: README.md
microservices/auth-service/src/main/java/com/example/auth/: AuthController.java
quality/: README.md  main.c
