cmake_minimum_required(VERSION 3.20)
project(App C)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
file(GLOB SRC_FILES CONFIGURE_DEPENDS "*.c")
add_executable(app ${SRC_FILES})
if (MSVC)
  target_compile_options(app PRIVATE /W4 /permissive- /Zc:__cplusplus /diagnostics:column /FC)
  target_compile_definitions(app PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
if (WIN32)
  target_link_libraries(app ws2_32)
endif()
